# clixor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: clicker.rs  config.rs  error.rs  hook.rs  input.rs  main.rs  timer.rs  vk.rs
